<resources>
    <string name="app_name">Notess!</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="delete_account">Delete Account</string>
    <string name="Sign_up">Sign Up</string>
    <string name="Username">Username:</string>
    <string name="enter_a_username">Enter a Username</string>
    <string name="email">Email:</string>
    <string name="enter_a_email">Enter a Email</string>
    <string name="Password">Password:</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="mobile">Mobile:</string>
    <string name="enter_a_mobile_number">Enter a Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>

    <string name="starred_string">Add and View Notes</string>
    <string name="inbox_string">Edit Profile</string>
    <string name="sent_mail_string">Logout</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="edit_details">Edit Details</string>
    <string name="adding_note">Adding Note</string>
    <string name="heading">Heading</string>
    <string name="enter_the_heading">Enter the heading</string>
    <string name="add_notes">Add Notes</string>
    <string name="add_anything">Add anything</string>
    <string name="note_submit">Submit</string>
    <string name="view_notes">View Notes</string>


</resources>
