<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adding_note"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heading"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_weight="1.8"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_heading"
            android:layout_weight="1"
            android:id="@+id/heading"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_notes"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_weight="1.8"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_anything"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:maxLines="4"
            android:id="@+id/notes"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_submit"
        android:textStyle="bold"
        android:textSize="15sp"
        android:id="@+id/note_submit"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_notes"
        android:textStyle="bold"
        android:textSize="15sp"
        android:id="@+id/view_note"/>


</LinearLayout>