<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_marginLeft="10sp"
    android:layout_marginRight="10sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_details"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:text="@string/Username"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/edit_user"
            android:hint="@string/enter_a_username"
            android:theme="@style/MyEditTextTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:text="@string/email"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_a_email"
            android:id="@+id/edit_email"
            android:inputType="textEmailAddress"
            android:theme="@style/MyEditTextTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:text="@string/Password"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_a_password"
            android:inputType="textPassword"
            android:id="@+id/edit_pass"
            android:theme="@style/MyEditTextTheme"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.7"
            android:text="@string/mobile"
            android:textStyle="bold"
            android:textSize="15sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/enter_a_mobile_number"
            android:inputType="number"
            android:id="@+id/edit_mobile"
            android:theme="@style/MyEditTextTheme"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/edit_submit"
        android:textStyle="bold"
        android:textSize="15sp"/>
</LinearLayout>